==> openwsn/node/cc2430zbwork_iar/common/openwsn/hal/cc2430zbwork/hal_uart.c <==
#include "../hal_configall.h"
#include <avr/io.h>
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include "../hal_foundation.h"
#include "../hal_device.h"
#include "../hal_targetboard.h"
#include "../hal_led.h"
#include "../hal_assert.h"
#include "../hal_cpu.h"
#include "../hal_interrupt.h"
#include "../hal_uart.h"
#include "../hal_device.h"
#define min(x,y) (((x)<(y))?(x):(y))

TiUartAdapter * uart_open( TiUartAdapter * uart, uint8 id, uint16 baudrate, uint8 databits, uint8 stopbits, uint8 option )
{
    uint8 tmpn;

	/* assume: 
	 * - the global interrupt is disabled when calling this function 
	 * - you have already call HAL_SET_PIN_DIRECTIONS. the pin should initialized correctly. or else it doesn't work.
	 */

	uart->id = id;
	uart->baudrate = baudrate;
	uart->databits = databits;
	uart->stopbits = stopbits;
	uart->option = option;

    #ifdef CONFIG_UART_INTERRUPT_DRIVEN
    uart->txlen = 0;
	uart->txidx = 0;
    uart->rxlen = 0;
    uart->listener = NULL;
	uart->lisowner = NULL;
    #endif

	/* @warning
	 * @attention
	 * THIS FUNCTION IS AFFECTED BY YOUR HARDWARE CLOCK SETTINGS 
	 */
	
	/* for ICT GAINZ platform, the clock is 8 MHz */
	#ifndef CONFIG_GAINZ_CLOCK_FREQUENCY
	#error currently can only run on GAINZ platform. you may need modify it to adapt your own platform.
	#endif

	switch (uart->id)
	{
	/* uart0 configure */
	case 0:
		/* initialize PIN directions. PE0 should be input and PE1 should be output.
		 * @attention:
		 * however, the simple echo program can run successfully without these PIN
		 * directions configuration. I don't know why. 
		 */
		DDRE &= (~(1 << DDE0));		// set PE0/USART0 RXD as input
		DDRE |= (1 << DDE1 );		// set PE1/USART0 TXD as output

		/* set baudrate. assume the CPU clock is 8MHz (for GAINZ)
		 * tested settings: baudrate = 38400 bps 
		 * when UBRR0L is 12, baudrate is 38.4k baud (8.00MHz) error: 0.2%
		 */
		switch (baudrate)
		{
		case 57600: UBRR0L=8; break;
		case 38400: UBRR0L=12; break;
		default: UBRR0L=0; break; // todo correct it 
		}

		/* set frame format: 8 data, 2 stop bit */
		// UCSRC = (1 << USBS) | (3 < UCSZ0);

		#ifdef CONFIG_UART_INTERRUPT_DRIVEN
		UCSR0B = ((1 << RXCIE) | (1 << RXEN) | (1 << TXEN));
		hal_attachhandler( INTNUM_USART0_RX, _uart_rx0_interrupt_handler, uart );
		hal_attachhandler( INTNUM_USART0_UDRE, _uart_tx0_interrupt_handler, uart );
		#else
		/* enable receiver and transmitter */
		UCSR0B = (1 << RXEN0) | (1 << TXEN0);
		#endif
		break;

	/* uart1 configure */
	case 1: 		 
		//HAL_MAKE_PD2_INPUT();
		//HAL_MAKE_PD3_OUTPUT();

		/* {UBRRH, UBRRL} = system clock / (16 * baudrate) - 1 */
		tmpn = (CONFIG_SYSTEM_CLOCK / (16L * baudrate) - 1);
		UBRR1H = (unsigned char)(tmpn >> 8);
		UBRR1L = (unsigned char)tmpn;

		#ifdef CONFIG_UART_INTERRUPT_DRIVEN
		UCSR1B = ((1 << RXCIE) | (1 << RXEN1) | (1 << TXEN1));
		UCSR1C = 0x06;
		hal_attachhandler( INTNUM_USART1_RX, _uart_rx1_interrupt_handler, uart );
		hal_attachhandler( INTNUM_USART1_UDRE, _uart_tx1_interrupt_handler, uart );
		#else
		UCSR1B = (1 << RXEN1) | (1 << TXEN1);
		#endif
		break;

	default:
		uart = NULL;
		break;
	}

	return uart;
}

intx uart_getchar( TiUartAdapter * uart, char * pc )
{
#ifdef CONFIG_UART_INTERRUPT_DRIVEN
	intx ret = -1;
	hal_atomic_begin();
	if (uart->rxlen > 0)
	{
		*pc = uart->rxbuf[0];
		uart->rxlen --;
		memmove( (void *)&(uart->rxbuf[0]), (void *)&(uart->rxbuf[1]), uart->rxlen );
		ret = 0;
	}
	hal_atomic_end();
	return ret;
#endif

#ifndef CONFIG_UART_INTERRUPT_DRIVEN
	int16 ret=0;

	switch (uart->id)
	{
	case 0:
		if (UCSR0A & (1<<RXC0))
			*pc = UDR0;
		else
			ret = -1;// @todo suggest 0
		break;

	case 1:
		if (UCSR1A & (1<<RXC1))
			*pc = UDR1;
		else
			ret = -1; // @todo suggest 0
		break;
	default:
		ret = -1;
	}

	return ret;
#endif
}

char uart_getchar_wait( TiUartAdapter * uart )   
{
#ifdef CONFIG_UART_INTERRUPT_DRIVEN
	char ch=0;
	while (uart->rxlen <= 0) {};
	uart_getchar( uart, &ch );
	return ch;
#endif

#ifndef CONFIG_UART_INTERRUPT_DRIVEN
	char ch = 0;

	switch (uart->id)
	{
	case 0:
		while (!(UCSR0A & (1<<RXC0))) {};
		ch = UDR0;
		break;
	case 1:
		while (!(UCSR1A & (1<<RXC1))) {};
		ch = UDR1;
		break;
	}

	return ch;
#endif
}

 intx uart_putchar( TiUartAdapter * uart, char ch )
{
#ifdef CONFIG_UART_INTERRUPT_DRIVEN
	intx ret;

	// put the character to be send in the internal buffer "txbuf"
	//
	hal_atomic_begin();
	ret = CONFIG_UART_TXBUFFER_SIZE - uart->txlen;
	if (ret > 0)
	{
		uart->txbuf[uart->txlen] = ch;
		uart->txlen ++;
	}

	// if the background ISR sending doesn't active, then enable and trigger this interrupt
	//
	if (uart->txidx == 0)
	{
		switch (uart->id)
		{
		case 0:
			while (!(UCSR0A & (1<<UDRE0))) {};      // check whether UDR0 is available for the 
													// new character to be sent
			UCSR0B |= (1 << UDRIE);                 // enable sending interrupt. the ISR will
													// continue sending until uart->txbuf is emtpy
			break;
		case 1:
			UCSR1B |= (1 << UDRIE);
			break;
		}
	}	
	hal_atomic_end();

	return (ret > 0) ? 0 : -1;
#endif

#ifndef CONFIG_UART_INTERRUPT_DRIVEN
	/* wait for the transmit buffer empty */
	switch (uart->id)
	{
	case 0:
		while (!(UCSR0A & (1<<UDRE0))) {};
		UDR0 = ch;
		break;
	case 1:
		while (!(UCSR1A & (1<<UDRE1))) {};
		UDR1 = ch;
	}
	return 0;
#endif
}

uintx uart_read( TiUartAdapter * uart, char * buf, uintx size, uint8 opt )
{
#ifdef CONFIG_UART_INTERRUPT_DRIVEN
	intx copied=0;

	hal_atomic_begin();
	copied = min( uart->rxlen, size );
	if (copied > 0)
	{
		memmove( (void *)buf, (void *)&(uart->rxbuf[0]), copied );
		uart->rxlen -= copied;
		if (uart->rxlen > 0)
			memmove( (void *)&(uart->rxbuf[0]), (void *)&(uart->rxbuf[copied]), uart->rxlen );
	}
	hal_atomic_end();

	return copied;
#endif

#ifndef CONFIG_UART_INTERRUPT_DRIVEN
	intx ret;
	ret = uart_getchar( uart, buf );
	return (ret>=0) ? 1 : 0;
#endif

    return 0;
}

uintx uart_write( TiUartAdapter * uart, char * buf, uintx len, uint8 opt )
{
#ifdef CONFIG_UART_INTERRUPT_DRIVEN
	intx count = 0;

	hal_atomic_begin();
	count = min(CONFIG_UART_TXBUFFER_SIZE - uart->txlen, len);
	if (count > 0)
	{
		memmove( (void *)&(uart->txbuf[uart->txlen]), (void *)buf, count);
		uart->txlen += count;
	}

	// if the background ISR sending doesn't active, then enable and trigger this interrupt
	//
	if (uart->txidx == 0)
	{
		switch (uart->id)
		{
		case 0:
			while (!(UCSR0A & (1<<UDRE0))) {};      // check whether UDR0 is available for the 
													// new character to be sent
			UCSR0B |= (1 << UDRIE);                 // enable sending interrupt. the ISR will
													// continue sending until uart->txbuf is emtpy
			break;
		case 1:
			UCSR1B |= (1 << UDRIE);
			break;
		}
	}	
	hal_atomic_end();

	// default option is synchronous call. this function will return until all 
	// data being sent successfully.
	//
	if ((opt & 0x01) == 0)
	{
		// wait for sending complete
		while (uart->txlen > 0) {};

		// attention
		// if the parameter "len" is very large, then we "recursively" call uart_write()
		// to send all the data out.  
		//
		if (count < len)
		{
			uart_write( uart, (char *)buf+count, len-count, opt );
			while (uart->txlen > 0) {};
		}
		return len;
	}
	// if this is an asynchronous call, this function will return immediately 
	// and assume the "count" characters in the front of the "buf" has been 
	// sent successfully.
	else{
		return count;
	}
#endif

#ifndef CONFIG_UART_INTERRUPT_DRIVEN
	int16 count = 0;
	while (count < len)
	{
		if (uart_putchar(uart, buf[count]) < 0)
			break;
		count ++;
	}
	
	return count;
#endif
}
