==> openwsn/node/cc2430zbw_iar/common/openwsn/hal/opennode2010/hal_uart.c <==
#include "../hal_configall.h"
#include <stdlib.h>
#include <string.h>
#include "../hal_foundation.h"
#include "../hal_device.h"
#include "../hal_targetboard.h"
#include "../hal_led.h"
#include "../hal_assert.h"
#include "../hal_cpu.h"
#include "../hal_mcu.h"
#include "../hal_uart.h"

TiUartAdapter * uart_open( TiUartAdapter * uart, uint8 id, uint16 baudrate, uint8 databits, uint8 stopbits, uint8 option )
{
    USART_InitTypeDef USART_InitStructure;

	/* assume: 
	 * - the global interrupt is disabled when calling this function 
	 * - you have already call HAL_SET_PIN_DIRECTIONS. the pin should initialized correctly. or else it doesn't work.
	 */

	uart->id = id;
	uart->baudrate = baudrate;
	uart->databits = databits;
	uart->stopbits = stopbits;
	uart->option = option;

    #ifdef CONFIG_UART_INTERRUPT_DRIVEN
    uart->txlen = 0;
	uart->txidx = 0;
    uart->rxlen = 0;
    uart->listener = NULL;
	uart->lisowner = NULL;
    #endif

	switch (id)
	{
	    case 0:
            RCC_APB2PeriphClockCmd(RCC_APB2Periph_USART1, ENABLE);
            RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA, ENABLE);
            
            GPIO_InitStructure.GPIO_Pin = GPIO_Pin_9;
            GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
            GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
            GPIO_Init(GPIOA, &GPIO_InitStructure);

            GPIO_InitStructure.GPIO_Pin = GPIO_Pin_10;
            GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
            GPIO_Init(GPIOA, &GPIO_InitStructure);

            USART_InitStructure.USART_BaudRate = uart->baudrate;//baudrate;
            USART_InitStructure.USART_WordLength = USART_WordLength_8b;
            USART_InitStructure.USART_StopBits = USART_StopBits_1;
            USART_InitStructure.USART_Parity = USART_Parity_No;
            USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
            USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;

            USART_Init( USART1,&USART_InitStructure);
            USART_Cmd( USART1,ENABLE);
		    break;

	    case 1:
            RCC_APB1PeriphClockCmd(RCC_APB1Periph_USART2, ENABLE);
            RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA, ENABLE);
            
            GPIO_InitStructure.GPIO_Pin = GPIO_Pin_2;
            GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
            GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
            GPIO_Init(GPIOA, &GPIO_InitStructure);

            GPIO_InitStructure.GPIO_Pin = GPIO_Pin_3;
            GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
            GPIO_Init(GPIOA, &GPIO_InitStructure);

            USART_InitStructure.USART_BaudRate = uart->baudrate;//baudrate;
            USART_InitStructure.USART_WordLength = USART_WordLength_8b;
            USART_InitStructure.USART_StopBits = USART_StopBits_1;
            USART_InitStructure.USART_Parity = USART_Parity_No;
            USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
            USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;

            USART_Init( USART2,&USART_InitStructure);
            USART_Cmd( USART2,ENABLE);
            break;

        case 2:
            RCC_APB1PeriphClockCmd(RCC_APB1Periph_USART3, ENABLE);
            RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB, ENABLE);
            GPIO_InitStructure.GPIO_Pin = GPIO_Pin_10;
            GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
            GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
            GPIO_Init(GPIOA, &GPIO_InitStructure);


            GPIO_InitStructure.GPIO_Pin = GPIO_Pin_11;
            GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
            GPIO_Init(GPIOA, &GPIO_InitStructure);

            USART_InitStructure.USART_BaudRate = uart->baudrate;//baudrate;
            USART_InitStructure.USART_WordLength = USART_WordLength_8b;
            USART_InitStructure.USART_StopBits = USART_StopBits_1;
            USART_InitStructure.USART_Parity = USART_Parity_No;
            USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
            USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;

            USART_Init( USART3,&USART_InitStructure);
            USART_Cmd( USART3,ENABLE);
		    break;

	    default:
            // not support now.
            hal_assert(false);
		    uart = NULL;
		    break;
	}

	return uart;
}

intx uart_getchar( TiUartAdapter * uart, char * pc )
{
#ifdef CONFIG_UART_INTERRUPT_DRIVEN
    intx ret = -1;
    hal_enter_critical();
    if (uart->rxlen > 0)
    {
        *pc = uart->rxbuf[0];
        uart->rxlen --;
        memmove( (void *)&(uart->rxbuf[0]), (void *)&(uart->rxbuf[1]), uart->rxlen );
        ret = 0;
    }
    hal_leave_critical();
    return ret;
#endif

#ifndef CONFIG_UART_INTERRUPT_DRIVEN
    int8 ret=0;

    switch (uart->id)
    {
    case 0:
        if (USART_GetFlagStatus(USART1, USART_FLAG_RXNE) != RESET)
        {
            *pc = (USART_ReceiveData(USART1) & 0xFF); 
            ret = 1;
        }
        break;

    case 1:
        if (USART_GetFlagStatus(USART2, USART_FLAG_RXNE) != RESET)
        {
            *pc = (USART_ReceiveData(USART2) & 0xFF); 
            ret = 1;
        }
        break;
            
    case 2:
        if (USART_GetFlagStatus(USART3, USART_FLAG_RXNE) != RESET)
        {
            *pc = (USART_ReceiveData(USART3) & 0xFF); 
            ret = 1;
        }
        break;

    default:
        ret = -1;
    }

    return ret;
#endif
}

char uart_getchar_wait( TiUartAdapter * uart )   
{
    #ifdef CONFIG_UART_INTERRUPT_DRIVEN
    char ch=0;
    while (uart->rxlen <= 0) {};
    uart_getchar( uart, &ch );
    return ch;
    #endif

    #ifndef CONFIG_UART_INTERRUPT_DRIVEN
	char ch=0;
    switch (uart->id)
    {
    case 0:
        while(USART_GetFlagStatus(USART1, USART_FLAG_RXNE) == RESET){};
        ch = (USART_ReceiveData(USART1) & 0xFF); 
        break;
    case 1:
        while(USART_GetFlagStatus(USART2, USART_FLAG_RXNE) == RESET){};
        ch = (USART_ReceiveData(USART2) & 0xFF); 
        break;
    case 2:
        while(USART_GetFlagStatus(USART3, USART_FLAG_RXNE) == RESET){};
        ch = (USART_ReceiveData(USART3) & 0xFF); 
        break;
    default:
        ch = 0x00;
        break;
    }
    return ch;
    #endif
}

intx uart_putchar( TiUartAdapter * uart, char ch )
{
#ifdef CONFIG_UART_INTERRUPT_DRIVEN
    intx ret;

    // put the character to be send in the internal buffer "txbuf"
    //
    hal_enter_critical();
    ret = CONFIG_UART_TXBUFFER_SIZE - uart->txlen;
    if (ret > 0)
    {
        uart->txbuf[uart->txlen] = ch;
        uart->txlen ++;
    }

    // if the background ISR sending doesn't active, then enable and trigger this interrupt
    //
    if (uart->txidx == 0)
    {
        switch (uart->id)
        {
        case 0:
            while (!(UCSR0A & (1<<UDRE0))) {};      // check whether UDR0 is available for the 
            // new character to be sent
            UCSR0B |= (1 << UDRIE);                 // enable sending interrupt. the ISR will
            // continue sending until uart->txbuf is emtpy
            break;
        case 1:
            UCSR1B |= (1 << UDRIE);
            break;
        }
    }	
    hal_leave_critical();

    return (ret > 0) ? 0 : -1;
#endif

#ifndef CONFIG_UART_INTERRUPT_DRIVEN
    /* wait for the transmit buffer empty */
    // todo: should adjust the order 
    intx ret=1;
    switch (uart->id)
    {
    case 0:
        while ( USART_GetFlagStatus(USART1, USART_FLAG_TXE) == RESET) {};
        USART_SendData(USART1, ch);
        break;
    case 1:
        while ( USART_GetFlagStatus(USART2, USART_FLAG_TXE) == RESET) {};
        USART_SendData(USART2, ch);
        break;
    case 2:
        while ( USART_GetFlagStatus(USART3, USART_FLAG_TXE) == RESET) {};
        USART_SendData(USART3, ch);
        break;
    default: 
        ret = -1;
    }
    return ret;
#endif
}

intx uart_read( TiUartAdapter * uart, char * buf, intx size, uint8 opt )
{
#ifdef CONFIG_UART_INTERRUPT_DRIVEN
    intx copied=0;
    int8 count =0;
    
    hal_enter_critical();
    copied = min( uart->rxlen, size );
    if (copied > 0)
    {
        memmove( (void *)buf, (void *)&(uart->rxbuf[0]), copied );
        uart->rxlen -= copied;
        if (uart->rxlen > 0)
            memmove( (void *)&(uart->rxbuf[0]), (void *)&(uart->rxbuf[copied]), uart->rxlen );
    }
    hal_leave_critical();
    return copied;
#endif

#ifndef CONFIG_UART_INTERRUPT_DRIVEN
    intx ret=0;
    if (size > 0)
    {
        ret = uart_getchar( uart, buf );
	}
    return ret;
#endif
}

intx uart_write( TiUartAdapter * uart, char * buf, intx len, uint8 opt )
{
#ifdef CONFIG_UART_INTERRUPT_DRIVEN
    intx count = 0;

    hal_enter_critical();
    count = min(CONFIG_UART_TXBUFFER_SIZE - uart->txlen, len);
    if (count > 0)
    {
        memmove( (void *)&(uart->txbuf[uart->txlen]), (void *)buf, count);
        uart->txlen += count;
    }

    // if the background ISR sending doesn't active, then enable and trigger this interrupt
    //
    if (uart->txidx == 0)
    {
        switch (uart->id)
        {
        case 0:
            while (!(UCSR0A & (1<<UDRE0))) {};      // check whether UDR0 is available for the 
            // new character to be sent
            UCSR0B |= (1 << UDRIE);                 // enable sending interrupt. the ISR will
            // continue sending until uart->txbuf is emtpy
            break;
        case 1:
            UCSR1B |= (1 << UDRIE);
            break;
        }
    }	
    hal_leave_critical();

    // default option is synchronous call. this function will return until all 
    // data being sent successfully.
    //
    if ((opt & 0x01) == 0)
    {
        // wait for sending complete
        while (uart->txlen > 0) {};

        // attention
        // if the parameter "len" is very large, then we "recursively" call uart_write()
        // to send all the data out.  
        //
        if (count < len)
        {
            uart_write( uart, (char *)buf+count, len-count, opt );
            while (uart->txlen > 0) {};
        }
        return len;
    }
    // if this is an asynchronous call, this function will return immediately 
    // and assume the "count" characters in the front of the "buf" has been 
    // sent successfully.
    else{
        return count;
    }
#endif

#ifndef CONFIG_UART_INTERRUPT_DRIVEN
    intx count = len;
    while (count > 0)
    {
        if (uart_putchar(uart, buf[len-count]) <= 0)
            break;
        count --;
    }
    return len-count;
#endif
}
